# StarTap-Fast-Search-Win

./: .gitignore  .traeignore  ARCHITECTURE.md  Cargo.toml  README.md  build.rs
.trae/skills/geek-tools/: SKILL.md
lib/: Everything-1.5a.ini  Search History-1.5a.csv  Session-1.5a.json
src/: cli.rs  config.rs  content_search.rs  custom_path.rs  dpi.rs  gui.rs  indexer.rs  ipc.rs  main.rs  ntfs_search.rs  searcher.rs  service.rs  test_backend.rs  types.rs
